--- a/config.json
+++ b/config.json
@@ -24,19 +24,19 @@
     "ignoreCommand": []
   },
   "adminBot": [
-    "100014754734049",
-    "100075122837809",
-    "100085332887575"
+    "61580322062833",
+    "61582341275575",
+    "61583210850095"
   ],
   "whiteListMode": {
     "enable": false,
     "whiteListIds": [
-      "100014754734049"
+      "4095426180772827"
     ],
     "notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
   },
-  "nickNameBot": "「 𝐌𝐀𝐇𝐀𝐁𝐔𝐁-𝐁𝐎𝐓 」🩷🪽",
-  "prefix": "/",
+  "nickNameBot": "乂✰ᎮᎧᎧᏦᎥᏋ☆🎀🙂",
+  "prefix": "-",
   "database": {
     "type": "sqlite",
     "uriMongodb": "",
